--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "web3": "^1.2.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "dev": "react-scripts start",
     "build": "CI= GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -75,7 +76,5 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
     "prettier": "2.3.1"
-  },
-  "start": "node server.js",
-  "dev": "react-scripts start"
+  }
 }
